Updates env vars to NEXT_PUBLIC_ prefix for frontend
Aligns environment variable names with NEXT.js conventions,
ensuring variables are exposed to the frontend by adding the
NEXT_PUBLIC_ prefix. Improves clarity and prevents issues with
frontend environment variable access.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     environment:
       NODE_ENV: production
-      PORTAL_HOSTNAME: portal:3000
-      RECIPES_HOSTNAME: receitas:3000
+      NEXT_PUBLIC_PORTAL_HOSTNAME: portal:3000
+      NEXT_PUBLIC_RECIPES_HOSTNAME: receitas:3000
       NEXT_TELEMETRY_DISABLED: "1"
       PORT: "3000"
