--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 NODE_ENV="development"
-PORTAL_HOSTNAME="portal:3000"
-RECIPES_HOSTNAME="receitas:3000"
+NEXT_PUBLIC_PORTAL_HOSTNAME="portal:3000"
+NEXT_PUBLIC_RECIPES_HOSTNAME="receitas:3000"
